--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "customerserver",
   "version": "1.0.0",
   "description": "Express Node.js Server with List of Customers",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/vincelawdev/CustomerServer#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
